Admin: Ensure Automatic data update scripts use a unique branch

--- a/.github/workflows/data-update_ec2-instance-offerings.yml
+++ b/.github/workflows/data-update_ec2-instance-offerings.yml
@@ -47,5 +47,5 @@ jobs:
         COMMIT_MESSAGE: 'chore: update EC2 Instance Offerings'
         COMMIT_NAME: 'Moto Admin'
         COMMIT_EMAIL: 'admin@getmoto.org'
-        PR_BRANCH_NAME: 'chore-update-${PR_ID}'
+        PR_BRANCH_NAME: 'chore-update-ec2-offerings-${PR_ID}'
         PR_TITLE: 'chore: update EC2 Instance Offerings'
