--- a/.github/workflows/data-update_ssm-default-amis.yml
+++ b/.github/workflows/data-update_ssm-default-amis.yml
@@ -43,9 +43,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.PR_ACCESS_TOKEN }}
         EXECUTE_COMMANDS: |
           pip install boto3
+          pip install moto
           python scripts/ssm_get_default_amis.py
         COMMIT_MESSAGE: "chore: update SSM default AMI's"
         COMMIT_NAME: 'Moto Admin'
         COMMIT_EMAIL: 'admin@getmoto.org'
-        PR_BRANCH_NAME: 'chore-update-${PR_ID}'
+        PR_BRANCH_NAME: 'chore-update-ssm-amis-${PR_ID}'
         PR_TITLE: "chore: update SSM Instance AMI's"
